# surfacic_toolpaths

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
cmake/: utils.cmake
include/: brep_builder.hxx  brep_to_stl.hxx  geometric_primitives.hxx  tool_curve.hxx  tool_profile.hxx  toolpath.hxx  util.hxx
src/: brep_builder.cpp  brep_builder.hxx  brep_to_stl.cpp  brep_to_stl.hxx  curve.cpp  line.cpp  main.cpp  path.cpp  tool_curve.cpp  toolpath.cpp  util.cpp  util.hxx
src/include/: glfw_occt_view.hxx  glfw_occt_view_p.hxx  glfw_occt_window.hxx  glfw_occt_window_p.hxx  tool_curve.hxx  tool_curve_p.hxx  util.hxx  util_p.hxx
src/visualization/: glfw_occt_view.cpp  glfw_occt_window.cpp
tests/: test.cpp
